# tarefa-as-u4c2o1234a-2025-01-20

./: .gitignore  Animation5.c  Animation5.h  CMakeLists.txt  ConversorHexadecimal_RGB.C  LICENSE  Matriz2.c  README.md  animacao_3.c  animacao_3.h  animacao_6.c  animacao_6.h  animation#.c  animation1.c  animation1.h  animation2.c  animation2.h  animation4.c  animation4.h  animation5.c  animation5.h  animation7.c  animation7.h  animation8.c  animation8.h  animation9.c  animation9.h  animationB.c  animationB.h  animationC.c  animationC.h  animationD.c  animationD.h  animationhashtag.c  animationhashtag.h  diagram.json  keypad.c  keypad.h  main.c  matriz_rgb.c  (+6 more)
Matriz_rgb/: diagram.json  neopixel_pio.c  piskel_convert.c
